--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "github": "git add . && git commit -m \"Auto-update by script\" && git push origin main"
+    "github": "git add . && git commit -m \"x\" && git push origin main"
   },
   "keywords": [],
   "author": "",
